//
//  File.swift
//  HitList
//
//  Created by iOS developer on 8/21/18.
//  Copyright © 2018 YiGu. All rights reserved.
//

import Foundation

enum HitListAccessibilityIdentifier : String {
    case tableOfNipa = "nipa"
    case tableOfTumpa = "tumpa"
    case tableOfShohag = "shohag"
    case tableOfAyman = "Ayman"
    case tableOfHira = "hira"
}

enum HitListButtons: String {
    case addButton = "Add"
    case saveButton = "Save"
    case cancelButton = "Cancel"
}
