...
                            <constraint firstItem="fAo-3j-ixL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="25" id="AIw-NK-2OK"/>
                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="fAo-3j-ixL" secondAttribute="trailing" constant="20" symbolic="YES" id="UMf-P4-nft"/>
                            <constraint firstItem="UPd-kC-dMX" firstAttribute="top" secondItem="fAo-3j-ixL" secondAttribute="bottom" constant="20.5" id="mkP-78-Ubs"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="CODER SWAG" id="rpN-Fi-umD"/>
                    <connections>
                        <outlet property="categoryTable" destination="UPd-kC-dMX" id="v5m-lc-JKu"/>
                        <segue destination="8As-yE-PqM" kind="show" identifier="ProductsVC" id="Abn-wJ-ejx"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="172" height="273"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                            <rect key="frame" x="0.0" y="0.0" width="172" height="273"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shirt01" translatesAutoresizingMaskIntoConstraints="NO" id="wan-oA-q1a">
                                                    <rect key="frame" x="0.0" y="13" width="172" height="172"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="172" id="lc4-f1-smh"/>
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$25" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="haJ-CG-cRH">
...
