//
//  coder_swagUITests.swift
//  coder-swagUITests
//
//  Created by iOS developer on 7/18/18.
//  Copyright © 2018 iOS developer. All rights reserved.
//

import XCTest

class coder_swagUITests: XCTestCase {
    
    let app = XCUIApplication()
   
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        
        let app = XCUIApplication()
        let tablesQuery = app.tables
        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["SHIRTS"]/*[[".cells.staticTexts[\"SHIRTS\"]",".staticTexts[\"SHIRTS\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.otherElements.containing(.navigationBar, identifier:"SHIRTS").children(matching: .other).element.children(matching: .other).element.children(matching: .other).element.children(matching: .collectionView).element.swipeUp()
        app.navigationBars["SHIRTS"].buttons["CODER SWAG"].tap()
        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["HOODIES"]/*[[".cells.staticTexts[\"HOODIES\"]",".staticTexts[\"HOODIES\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.navigationBars["HOODIES"].buttons["CODER SWAG"].tap()

    }
    func testAppIsLauch() {
        let app = XCUIApplication()
        app.launch()
        
    }

    func testAppISActivate(){
        app.activate()
    }
    func testAppIsTerminate() {
        app.terminate()
    }
    func testTableViewCell1(){
        let table = app.tables.cells.staticTexts["SHIRTS"]
        table.tap()
    }
    func testTableViewCell2() {
        let table = app.tables.cells.staticTexts["HOODIES"]
        table.tap()
    }
    func testTableViewCell3() {
        let table = app.tables.cells.staticTexts["HATS"]
        table.tap()
    }
    func testTableViewCell4(){
        let table = app.tables.cells.staticTexts["DIGITAL"]
        table.tap()
    }
    func testCollectionViewOfCell1() {
        
    }
    
}
